<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_live"
        android:title="@string/live_line" />
    <item
        android:id="@+id/navigation_playing11"
        android:icon="@drawable/ic_men"
        android:title="@string/playing_xi" />
    <item
        android:id="@+id/navigation_odds"
        android:icon="@drawable/ic_odd"
        android:title="@string/match_odds"
        android:visible="true" />
    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_white_ball"
        android:title="@string/match_stats"
        android:visible="true" />
</menu>
