<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_live"
        android:title="@string/live_match" />
    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_white_calender"
        android:title="@string/upcoming" />

    <item
        android:id="@+id/navigation_join_telegram"
        android:title="" />

    <item
        android:id="@+id/navigation_result"
        android:icon="@drawable/ic_king"
        android:title="@string/results" />
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="News" />
</menu>
